--- a/school_name.html
+++ b/school_name.html
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body>
-    <img src="D:\School Education System\school logo 2.png" alt="School Logo" width="200" height="120">
+    <img src="school logo 2.png" alt="School Logo" width="200" height="120">
     <!--<input type="button" name="Menu" value="Menu">
     <select class="" name="Menu" value="Menu">
       <option value="Mission and Vision"><a href="D:\School Education System\miss.html">Mission and Vision</option>
