--- a/school_name.html
+++ b/school_name.html
@@ -9,7 +9,7 @@
       }*/
       body
       {
-        background-image: url("D:/School Education System/tr1.jpg");
+        background-image: url("tr1.jpg");
         background-repeat: no-repeat;
         height: 146.4px;
         width: 188px;
