--- a/school_photo.html
+++ b/school_photo.html
@@ -6,7 +6,7 @@
     <style media="screen">
       body
       {
-        background-image: url("D:/School Education System/tr2.jpg");
+        background-image: url("tr2.jpg");
         background-repeat: no-repeat;
         background-size: cover;
       }
@@ -31,9 +31,9 @@
   </head>
   <body>
     <ul style = "list-style-type: NONE">
-      <li><a href="D:\School Education System\miss.html" target="_blank"><b>Mission and Vision</b></li>
-      <li><a href="D:\School Education System\admiss.html" target="_blank"><b>Admissions</b></li>
-      <li><a href="D:\School Education System\curriculum.html" target="_blank"><b>Curriculum</b></li>
+      <li><a href="miss.html" target="_blank"><b>Mission and Vision</b></li>
+      <li><a href="admiss.html" target="_blank"><b>Admissions</b></li>
+      <li><a href="curriculum.html" target="_blank"><b>Curriculum</b></li>
           <!--<select class="Curriculum" name="Curriculum">
             <option value="-1">Curriculum</option>
             <option value="Academic Year">Academic Year</option>
@@ -41,12 +41,12 @@
             <option value="Co-curricular">Co-curriculum</option>
             <option value="Extra-curricular">Extra-curricular</option>
           </select>-->
-      <li><a href="D:\School Education System\s_details.html" target="_blank"><b>Student Academic Details</b></li>
-      <li><a href="D:\School Education System\login.html" target="_blank"><b>Login<b></li><br>
+      <li><a href="s_details.html" target="_blank"><b>Student Academic Details</b></li>
+      <li><a href="login.html" target="_blank"><b>Login<b></li><br>
       <li><a href="" target="_blank"><b>Feedback</b></li>
     </ul>
     <ul style = "list-style-type: NONE">
-      <li><a href="D:\School Education System\gallery.html" target="_blank"><b>Students Achievements</b></li><br>
+      <li><a href="gallery.html" target="_blank"><b>Students Achievements</b></li><br>
       <li><a href="" target="_blank"><b>ICT & ICL</b></li><br>
       <li><a href="" target="_blank"><b>Exam & Result Section</b></li><br>
       <li><a href="" target="_blank"><b></b>Safety Measures taken for Children</li><br>
