--- a/staff login.html
+++ b/staff login.html
@@ -37,7 +37,7 @@
       }
 
       body{
-        background-image: url("D:/School Education System/learning.jpg");
+        background-image: url("learning.jpg");
         background-size: cover;
       }
     </style>
