--- a/about_school.html
+++ b/about_school.html
@@ -13,7 +13,7 @@
       }*/
       body
       {
-        background-image: url('D:/School Education System/school.jpg');
+        background-image: url('school.jpg');
         background-repeat: no-repeat;
         background-size: cover;
       }
