--- a/ay.html
+++ b/ay.html
@@ -5,7 +5,7 @@
     <title>Academic Year</title>
     <style media="screen">
       body{
-        background-image: url("D:/School Education System/AY.jpg");
+        background-image: url("AY.jpg");
         background-size: cover;
       }
       p{
