--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
       }*/
       body
       {
-        background-image: url("D:/School Education System/bottom.jpg");
+        background-image: url("bottom.jpg");
         background-repeat: no-repeat;
         background-size: cover;
       }
