--- a/curri_opt.html
+++ b/curri_opt.html
@@ -33,7 +33,7 @@
     <br />
     <table style="float: top;">
       <tr>
-        <th><a href="D:\School Education System\ay.html" target="_blank">Academic Year</a></th>
+        <th><a href="ay.html" target="_blank">Academic Year</a></th>
       </tr>
       <tr>
         <th>Courses of Study</th>
