--- a/curriculum.html
+++ b/curriculum.html
@@ -20,8 +20,8 @@
     </style>
   </head>
   <frameset cols="60%, 40%">
-    <frame name="lib" src="D:\School Education System\pic1.html" frameborder="no">
-    <frame name="lib_opt" src="D:\School Education System\curri_opt.html" frameborder="no">
+    <frame name="lib" src="pic1.html" frameborder="no">
+    <frame name="lib_opt" src="curri_opt.html" frameborder="no">
   </frameset>
   <body>
 
