--- a/gallery.html
+++ b/gallery.html
@@ -23,42 +23,42 @@
     <h1 style="text-align: center">Students' Achievements</h1>
     <div class="row">
       <div class="column">
-        <img src="D:\School Education System\images\img 1.jpeg" alt="Pic 1">
+        <img src="images\img 1.jpeg" alt="Pic 1">
       </div>
       <div class="column">
-        <img src="D:\School Education System\images\img 2.jpeg" alt="Pic 2">
+        <img src="images\img 2.jpeg" alt="Pic 2">
       </div>
       <div class="column">
-        <img src="D:\School Education System\images\img 3.jpeg" alt="Pic 3">
+        <img src="images\img 3.jpeg" alt="Pic 3">
       </div>
       <div class="column">
-        <img src="D:\School Education System\school_photo.jpg" alt="Pic 7">
+        <img src="school_photo.jpg" alt="Pic 7">
       </div>
       <div class="column">
-        <img src="D:\School Education System\images\img 5.jpeg" alt="">
+        <img src="images\img 5.jpeg" alt="">
       </div>
     </div>
     <div class="row">
       <div class="column">
-        <img src="D:\School Education System\images\img 4.jpeg" alt="Pic 4">
+        <img src="images\img 4.jpeg" alt="Pic 4">
       </div>
       <div class="column">
-        <img src="D:\School Education System\images\img 5.jpeg" alt="Pic 5">
+        <img src="images\img 5.jpeg" alt="Pic 5">
       </div>
       <div class="column">
-        <img src="D:\School Education System\images\img 6.jpeg" alt="Pic 6">
+        <img src="images\img 6.jpeg" alt="Pic 6">
       </div>
       <div class="column">
-        <img src="D:\School Education System\images\img 8.jpeg" alt="Pic 7">
+        <img src="images\img 8.jpeg" alt="Pic 7">
       </div>
       <div class="column">
-        <img src="D:\School Education System\images\img 9.jpeg" alt="">
+        <img src="images\img 9.jpeg" alt="">
       </div>
       <div class="column">
-        <img src="D:\School Education System\images\img 10.jpeg" alt="">
+        <img src="images\img 10.jpeg" alt="">
       </div>
       <div class="column">
-        <img src="D:\School Education System\images\img 4.jpeg" alt="">
+        <img src="images\img 4.jpeg" alt="">
       </div>
     </div>
   </body>
