--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         text-shadow: 5px 5px 1px white;
       }
       body{
-        background-image: url("D:/School Education System/login bg.jpg");
+        background-image: url("login bg.jpg");
         background-size: cover;
         background-repeat: space;
       }
@@ -27,10 +27,10 @@
     <br />
     <br />
     <br />
-    <h1><a href="D:\School Education System\staff login.html">Staff Login</a></h1>
+    <h1><a href="staff login.html">Staff Login</a></h1>
     <br />
     <br />
     <br />
-    <h1><a href="D:\School Education System\s_login.html">Student Login</a></h1>
+    <h1><a href="s_login.html">Student Login</a></h1>
   </body>
 </html>
