--- a/pic1.html
+++ b/pic1.html
@@ -16,6 +16,6 @@
     </style>
   </head>
   <body>
-    <img src="D:\School Education System\curri.jpg" alt="books">
+    <img src="curri.jpg" alt="books">
   </body>
 </html>
