--- a/s_login.html
+++ b/s_login.html
@@ -36,7 +36,7 @@
       }
 
       body{
-        background-image: url("D:/School Education System/child run.jpg");
+        background-image: url("child run.jpg");
         background-size: cover;
       }
     </style>
