--- a/validation.html
+++ b/validation.html
@@ -73,7 +73,7 @@
      </script>
 </head>
 <body>
-    <img src="C:\Users\SREYA\Downloads\book.jpg" width="1100" height="600"><br>
+    <img src="book.jpg" width="1100" height="600"><br>
     
     <form name="form" onsubmit="return validate()" action="action_page.php" target="_bottom">
             <div class="div1">
